--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,10 @@ permissions:
 on:
   push:
     branches:
-      - main
+      [main, develop]
   pull_request:
     branches:
-      - main
+      [main, develop]
   workflow_dispatch:
 
 concurrency:
