--- a/GeneralsMD/Code/GameEngine/CMakeLists.txt
+++ b/GeneralsMD/Code/GameEngine/CMakeLists.txt
@@ -1376,3 +1376,4 @@ target_compile_definitions(z_gameengine PRIVATE
 target_precompile_headers(z_gameengine PRIVATE Include/Precompiled/PreRTS.h)
 
 add_compile_definitions(GENERALS_ONLINE)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:strict")
