Disable building of things we don't modify/won't ever ship

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,13 +56,13 @@ jobs:
           echo "- GeneralsMD: ${{ steps.filter.outputs.generalsmd == 'true' && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
           echo "- Shared: ${{ steps.filter.outputs.shared == 'true' && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
 
-  build-generals:
-    name: Build Generals${{ matrix.preset && '' }}
-    needs: detect-changes
-    if: ${{ github.event_name == 'workflow_dispatch' || needs.detect-changes.outputs.generals == 'true' || needs.detect-changes.outputs.shared == 'true' }}
-    strategy:
-      matrix:
-        include:
+#  build-generals:
+#    name: Build Generals${{ matrix.preset && '' }}
+#    needs: detect-changes
+#    if: ${{ github.event_name == 'workflow_dispatch' || needs.detect-changes.outputs.generals == 'true' || needs.detect-changes.outputs.shared == 'true' }}
+#    strategy:
+#      matrix:
+#        include:
 #          - preset: "vc6"
 #            tools: true
 #            extras: true
@@ -75,26 +75,26 @@ jobs:
 #          - preset: "vc6-debug"
 #            tools: true
 #            extras: true
-          - preset: "win32-vcpkg"
-            tools: true
-            extras: true
-          - preset: "win32-vcpkg-profile"
-            tools: true
-            extras: true
-          - preset: "win32-vcpkg-internal"
-            tools: true
-            extras: true
-          - preset: "win32-vcpkg-debug"
-            tools: true
-            extras: true
-      fail-fast: false
-    uses: ./.github/workflows/build-toolchain.yml
-    with:
-      game: "Generals"
-      preset: ${{ matrix.preset }}
-      tools: ${{ matrix.tools }}
-      extras: ${{ matrix.extras }}
-    secrets: inherit
+#          - preset: "win32-vcpkg"
+#            tools: true
+#            extras: true
+#          - preset: "win32-vcpkg-profile"
+#            tools: true
+#            extras: true
+#          - preset: "win32-vcpkg-internal"
+#            tools: true
+#            extras: true
+#          - preset: "win32-vcpkg-debug"
+#            tools: true
+#            extras: true
+#      fail-fast: false
+#    uses: ./.github/workflows/build-toolchain.yml
+#    with:
+#      game: "Generals"
+#      preset: ${{ matrix.preset }}
+#      tools: ${{ matrix.tools }}
+#      extras: ${{ matrix.extras }}
+#    secrets: inherit
 
   build-generalsmd:
     name: Build GeneralsMD${{ matrix.preset && '' }}
@@ -116,18 +116,18 @@ jobs:
 #            tools: true
 #            extras: true
           - preset: "win32"
-            tools: true
-            extras: true
+            tools: false
+            extras: false
           - preset: "win32-profile"
-            tools: true
-            extras: true
+            tools: false
+            extras: false
           - preset: "win32-internal"
-            tools: true
-            extras: true
+            tools: false
+            extras: false
           - preset: "win32-debug"
-            tools: true
-            extras: true
-      fail-fast: false
+            tools: false
+            extras: false
+      fail-fast: true
     uses: ./.github/workflows/build-toolchain.yml
     with:
       game: "GeneralsMD"
