enable builds for this branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ permissions:
 on:
   push:
     branches:
-      [main, develop, secrets]
+      [main, develop, citest]
   pull_request:
     branches:
       [main, develop]
