--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,16 +116,16 @@ jobs:
 #            tools: true
 #            extras: true
           - preset: "win32"
-            tools: true
+            tools: false
             extras: true
           - preset: "win32-profile"
-            tools: true
+            tools: false
             extras: true
           - preset: "win32-internal"
-            tools: true
+            tools: false
             extras: true
           - preset: "win32-debug"
-            tools: true
+            tools: false
             extras: true
       fail-fast: true
     uses: ./.github/workflows/build-toolchain.yml
