--- a/GeneralsMD/Code/GameEngine/CMakeLists.txt
+++ b/GeneralsMD/Code/GameEngine/CMakeLists.txt
@@ -1244,6 +1244,25 @@ set(GAMEENGINE_SRC
     Include/GameNetwork/GeneralsOnline/Vendor/libsodium/sodium/private/mutex.h
     Include/GameNetwork/GeneralsOnline/Vendor/libsodium/sodium/private/softaes.h
     Include/GameNetwork/GeneralsOnline/Vendor/libsodium/sodium/private/sse2_64_32.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/plum.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/addr.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/client.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/dummytls.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/http.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/log.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/natpmp.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/net.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/noprotocol.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/pcp.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/protocol.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/random.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/socket.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/tcp.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/thread.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/timestamp.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/udp.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/upnp.h
+Include/GameNetwork/GeneralsOnline/Vendor/libplum/util.h
     Include/GameNetwork/GeneralsOnline/Vendor/sentry/sentry.h
     Include/GameNetwork/GeneralsOnline/Vendor/libcurl/curl.h
     Include/GameNetwork/GeneralsOnline/Vendor/libcurl/curlver.h
@@ -1283,6 +1302,22 @@ set(GAMEENGINE_SRC
     Include/GameNetwork/GeneralsOnline/Vendor/miniupnpc/upnpreplyparse.h
     Include/GameNetwork/GeneralsOnline/Vendor/miniupnpc/win32_snprintf.h
 
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/addr.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/client.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/dummytls.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/http.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/log.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/natpmp.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/net.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/noprotocol.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/pcp.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/plum.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/random.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/tcp.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/timestamp.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/udp.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/upnp.cpp
+Source/GameNetwork/GeneralsOnline/Vendor/libplum/util.cpp
     Source/GameNetwork/GeneralsOnline/NGMP_Helpers.cpp
     Source/GameNetwork/GeneralsOnline/NGMPGame.cpp
     Source/GameNetwork/GeneralsOnline/PortMapper.cpp
@@ -1348,6 +1383,7 @@ target_include_directories(z_gameengine PUBLIC
     Include/GameNetwork/GeneralsOnline/Vendor/
     Include/GameNetwork/GeneralsOnline/Vendor/libnatpmp
     Include/GameNetwork/GeneralsOnline/Vendor/miniupnpc
+    Include/GameNetwork/GeneralsOnline/Vendor/libplum
 )
 
 target_link_directories(z_gameengine PUBLIC
