--- a/GeneralsMD/Code/GameEngine/CMakeLists.txt
+++ b/GeneralsMD/Code/GameEngine/CMakeLists.txt
@@ -1150,6 +1150,7 @@ set(GAMEENGINE_SRC
     Include/GameNetwork/GeneralsOnline/OnlineServices_LobbyInterface.h
     Include/GameNetwork/GeneralsOnline/OnlineServices_RoomsInterface.h
     Include/GameNetwork/GeneralsOnline/OnlineServices_StatsInterface.h
+    Include/GameNetwork/GeneralsOnline/OnlineServices_MatchmakingInterface.h
     Include/GameNetwork/GeneralsOnline/PortMapper.h
     Include/GameNetwork/GeneralsOnline/GeneralsOnline_Settings.h
     Include/GameNetwork/GeneralsOnline/HTTP/HTTPManager.h
@@ -1349,6 +1350,7 @@ Source/GameNetwork/GeneralsOnline/Vendor/libplum/util.cpp
     Source/GameNetwork/GeneralsOnline/OnlineServices_LobbyInterface.cpp
     Source/GameNetwork/GeneralsOnline/OnlineServices_RoomsInterface.cpp
     Source/GameNetwork/GeneralsOnline/OnlineServices_StatsInterface.cpp
+    Source/GameNetwork/GeneralsOnline/OnlineServices_MatchmakingInterface.cpp
     Source/GameNetwork/GeneralsOnline/NextGenTransport.cpp
     Source/GameNetwork/GeneralsOnline/NetworkBitstream.cpp
 )
